--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,27 @@
-img {
+.mypic {
     border-radius: 200px;
     border: 3xp solid grey;
     box-shadow: 0 0 30px #666;
 }
 body {
+    box-sizing: border-box;
+    margin: 5;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5rem;
+    color: black;
     background: #e0e0e0;
-}
+  }
+  .footer {
+    display: block;
+    background-color: #708080;
+    margin: 1;
+    padding: 10px;
+    text-align: center;
+    color: #0b0c10;
+    font-size: 18px;
+    line-height: 1rem;
+  }
+  footer img {
+    width: 10%;
+  }
