--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,13 @@
 }
 body {
     box-sizing: border-box;
-    margin: 5;
+    margin: 5px;
     padding: 0;
     font-family: Serif;
     line-height: 1.5rem;
     color: black;
     background: #e0e0e0;
-    width: 100%%;
-    height: 100%;
+    height: 100vh;
   }
   .footer {
     display: block;
@@ -31,13 +30,13 @@ body {
     display: inline-block;
     width: 30%;
     margin: 15px;
-    background-color: #e0e0e0;
+    background-color: ##e0e0e0;
     box-shadow: 0 0 10px #e0e0e0;
     font-size: 1.2rem;
   }
   .right {
     display: inline-block;
-    width: 55%;
+    width: 40%;
     margin: 15px;
     background-color: #e0e0e0;
     box-shadow: 0 0 10px #e0e0e0;
@@ -50,7 +49,6 @@ body {
   }
   .contact {
     color: #3b3b3d;
-    text-align: center;
   }
   .contact ul {
     list-style: none;
@@ -74,5 +72,8 @@ body {
     color: #3b3b3d;
   }
   .languages ul {
+    list-style: none;
+  }
+  .aboutme ul {
     list-style: none;
   }
