--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     box-sizing: border-box;
     margin: 5px;
     padding: 0;
-    font-family: Serif;
+    font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5rem;
     color: black;
     background: #e0e0e0;
