--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
     box-sizing: border-box;
     margin: 5px;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5rem;
     color: black;
     background: #e0e0e0;
@@ -30,7 +29,7 @@ body {
     display: inline-block;
     width: 30%;
     margin: 15px;
-    background-color: ##e0e0e0;
+    background-color: #e0e0e0;
     box-shadow: 0 0 10px #e0e0e0;
     font-size: 1.2rem;
   }
