--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,70 @@
-.mypic {
-    border-radius: 200px;
-    border: 3xp solid grey;
-    box-shadow: 0 0 30px #666;
-    width: 48%;
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2rem;
+  color: #3b3b3d;
 }
-.image {
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+  max-width: 1440px;
+  height: 100%;
+  background-color: #e0e0e0;
+}
+a {
+  color: #3b3b3d;
+  text-decoration: none;
+}
+a:hover {
+  color: #2e1a1a;
+  text-decoration: underline;
+}
+.left {
+  display: inline-block;
+  width: 30%;
+  margin: 15px;
+}
+.personal {
+  padding: 15px;
   text-align: center;
 }
-body {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0;
-    line-height: 1.5rem;
-    color: black;
-    background: #e0e0e0;
-    height: 100vh;
-  }
-  .footer {
-    display: block;
-    background-color: #708080;
-    margin: 1;
-    padding: 10px;
-    text-align: center;
-    color: #0b0c10;
-    font-size: 15px;
-    line-height: 0rem;
-  }
-  footer img {
-    width: 5%;
-  }
-  .left {
-    display: inline-block;
-    width: 30%;
-    margin: 15px;
-    background-color: #e0e0e0;
-    box-shadow: 0 0 10px #e0e0e0;
-    font-size: 1.2rem;
-  }
-  .right {
-    display: inline-block;
-    width: 40%;
-    margin: 15px;
-    background-color: #e0e0e0;
-    box-shadow: 0 0 10px #e0e0e0;
-    font-size: 1.2rem;
-  }
-  .personal {
-    padding: 8px;
-    color: #3b3b3d;
-    text-align: center;
-  }
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    overflow: auto;
-    max-width: 80%;
-    height: 100vh;
-  }
+.right {
+  display: inline-block;
+  width: 65%;
+  margin: 15px;
+  font-size: 1.2rem;
+}
+.contact,
+.aboutme,
+.education,
+.skills,
+.languages {
+  width: 80%;
+  height: 20%;
+  margin: 5px auto;
+  padding: 15px;
+}
+.footer {
+  display: block;
+  background-color: #708080;
+  margin: 0 auto;
+  padding: 15px;
+  text-align: center;
+  color: #0b0c10;
+  font-size: 20px;
+}
+footer img {
+  width: 6%;
+}
+.mypic {
+  border-radius: 200px;
+  border: 3xp solid grey;
+  box-shadow: 0 0 30px #666;
+  width: 90%;
+}
+.image {
+text-align: center;
+}
